--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -3,7 +3,7 @@
   <div class="section-content section-content-p30">
     <div class="container-fluid">
       <div class="row">
-        
+
         <!---LOOP OVER COLLECTIONS OF PRODUCTS-->
         <div *ngFor="let tempProduct of products" class="col-md-3">
 
@@ -26,18 +26,61 @@
         </div>
         <!--div ngfor-->
         <!-- role="aleert" For the visually impaired. Accessibility: provide extra
-          information to asssistive technologies such as screen readers.
-          Safe navigation operator : "?"
-          Guards against null and undefined values in property paths
-          if (products is null/undefined) or (products.length=0) display:
-          "No Products FOund"-->
+      information to asssistive technologies such as screen readers.
+      Safe navigation operator : "?"
+      Guards against null and undefined values in property paths
+      if (products is null/undefined) or (products.length=0) display:
+      "No Products FOund"-->
         <div *ngIf="products?.length==0"
              class="alert alert-warning col-md-12"
-             role ="alert">
+             role="alert">
           No products found
         </div>
       </div>
       <!--row-->
+      <!-- begin footer -->
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-6"></div>
+
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-9" style="padding-left: 30%">
+
+                <!--Same properties as ProductListComponent-->
+                <!--auto pagination-->
+                <!--max size: shouldonly show a max number of pages-->
+                <!--https://ng-bootstrap.github.io/#/components/pagination/overview-->
+                <ngb-pagination [(page)]="thePageNumber"
+                                [pageSize]="thePageSize"
+                                [collectionSize]="theTotalElements"
+                                [maxSize]="5"
+                                [boundaryLinks]="true"
+                                (pageChange)="listProducts()">
+
+                </ngb-pagination>
+
+              </div>
+
+              <div class="col-md-3 mt-2" style="text-align: right;">
+                <span class="mr-2">Page Size</span>
+
+                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                  <option>2</option>
+                  <option selected="true">5</option>
+                  <option>10</option>
+                  <option>20</option>
+                  <option>50</option>
+                </select>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <!-- end footer -->
+
     </div>
     <!--container fluid-->
   </div>
